# mine-base-app-ws

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements.txt  run.py
api/: __init__.py
api/config/: compress.py  config.py  containers.py  extensions.py  logging_config.py  swagger.py
api/controller/: user_controller.py
api/exception/: not_found_error.py
api/model/: user.py
api/repository/: user_repository.py
api/route/: main_route.py
api/route/v1/: v1_routes.py
api/route/v1/health/: health_routes.py
api/route/v1/users/: user_routes.py
api/schema/: user_schema.py
api/service/: user_service.py
api/util/: error_handlers.py
docker-local-bd/: docker-compose.yml
migrations/: env.py
migrations/versions/: 91aee6833994_create_table_users.py
test/integration/: conftest.py  test_health_integration.py  test_user_integration.py
test/unit/: conftest.py
test/unit/controller/: test_user_controller.py
test/unit/repository/: test_user_repository.py
test/unit/route/: test_health_routes.py  test_user_routes.py
test/unit/service/: test_user_service.py
